--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "Feather.js",
-  "version": "0.0.0",
-  "description": "A lightweight library to select DOM elements"
+  "version": "0.1.0",
+  "description": "A lightweight library to select DOM elements",
   "main": "/dist/js/feather.js",
   "scripts": {
-    "test": "echo "Error: no test specified" && exit 1"
   },
   "repository": {
     "type": "git",
